# text-predictor

./: .gitignore  Pipfile  README.md  RNN_LSTM.ipynb  RNN_LSTM_chars.ipynb  RNN_LSTM_chars.py  RNN_LSTM_chars_2.py  RNN_LSTM_chars_2_generate.py  RNN_LSTM_chars_2_train.py  RNN_LSTM_letters.ipynb  RNN_LSTM_words.py  RNN_LTSM_chars.py  RNN_LTSM_chars_2.py  RNN_LTSM_letters.py  RNN_LTSM_words.py  config.py  data_provider.py  pyproject.toml  requirements.txt  rnn_model.py  text_predictor.py
data/comments/: input.txt  input_original.txt  output.txt  output_2020-02-18_15-13.txt  output_2020-2-18_15-46.txt  output_2020-2-18_16-14.txt  output_2020-2-18_18-45.txt
data/shakespeare/: 2022-03-20_16-50.txt
data/stupeflip/: output.txt
data/trolls_fr/: input.txt  input_original.txt
helpers/: logger.py
