[tool.poetry]
name = "trolls-ml"
version = "0.1.0"
description = ""
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "3.9"
tensorflow = "^2.7.0"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
