[tool.poetry]
name = "text-predictor"
version = "0.1.0"
description = ""
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
tensorflow = "^2.8.0"
Unidecode = "^1.3.3"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipython = "^8.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
