[project]
name = "text-predictor"
version = "0.1.0"
description = ""
authors = [{ name = "Adrien Carpentier", email = "moi@adriencarpentier.com" }]
license-expression = "MIT"
dependencies = [
    "numpy<2.0.0,>=1.22.2",
    "matplotlib<4.0.0,>=3.5.1",
    "tensorflow<3.0.0,>=2.8.0",
    "typer<1.0.0,>=0.4.0",
]
requires-python = ">=3.9,<4.0"

[project.urls]
Homepage = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "text-predictor"
version = "0.1.0"
description = ""
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
tensorflow = "^2.8.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipython = "^8.0.1"
isort = "^5.10.1"


[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = ["black<22.0,>=21.12b0", "ipython<9.0.0,>=8.0.1", "isort<6.0.0,>=5.10.1"]
